--- a/LoLWebWrapper/LoLWebWrapper.csproj
+++ b/LoLWebWrapper/LoLWebWrapper.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Core\Modules\uGGParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Libs\Leaf.xNet.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
